Add jdk21 preview usecases and some comparison with Qute.